V 2.2.2 * xmat-library.scss aligned to v 7.2.3 * Added custom optional body class in xmat-library * Fixed test:scss * Now grid columns number can be overridden * Styles refactor using @mixin * Moved xmat-overrides to new file * xmat-grid classnames can now be overridden

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+$xmat-body-class: "pluto";
+//
 @import "xmat-library";
 @import "xmat-vars";
 // Include theme styles for core and each component used in your app.
